# isw-graphit-eco

./: .gitignore  README.md
client/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
client/src/: App.vue  Sample.vue  main.ts  router.ts
client/src/api/: http.facade.ts
client/src/features/playground/: routes.ts
client/src/features/playground/containers/: PlayContainer.vue
server/: .gitignore  CMakeLists.txt  CMakePresets.json  command.md  commands.txt  vcpkg.json
server/source/: main.cpp
server/source/core/models/: Edge.h  Node.h
server/source/database/: ORM.h
